--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,19 @@ plugins {
 group 'com.seomse.shop.cs'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    implementation 'org.apache.poi:poi-ooxml:3.17'
-    implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
+    implementation 'org.apache.poi:poi-ooxml:3.16'
 
-    //log
-    implementation 'ch.qos.logback:logback-core:1.1.3'
-    implementation 'ch.qos.logback:logback-classic:1.1.3'
-    implementation 'ch.qos.logback:logback-access:1.1.3'
+    implementation 'ch.qos.logback:logback-core:1.2.3'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'ch.qos.logback:logback-access:1.2.3'
+
+    implementation 'com.seomse.commons:seomse-commons:1.0.0'
+    implementation 'com.seomse.poi:seomse-poi:0.1.0'
 
 }
